--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 spring.application.name=api-sistema-votacion
 
 spring.datasource.url=jdbc:mysql://localhost:3306/DBVotacion
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=soporte
-spring.jpa.properties..hibernate.dialect= org.hibernate.dialect.MYSQL5InnoDBDialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
