--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,18 @@
 spring.application.name=api-sistema-votacion
 
-spring.datasource.url=jdbc:mysql://localhost:3306/DBVotacion
+spring.datasource.url=jdbc:mysql://localhost:3306/DBVotacion?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=soporte
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.dialect=
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
 
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:dbvotacion.sql
+spring.sql.init.continue-on-error=false
+
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+server.port=8080
